# AIarmy

./: .env.example  .gitignore  README.md  SESSION_KEY_GUIDE.md  pyproject.toml  pyrightconfig.json  requirements.txt
.sisyphus/: boulder.json
.sisyphus/plans/: full-toolset.md  session-management.md
aiarmy/: cli.py
aiarmy/agents/: base.py  commander.py  developer.py  writer.py
aiarmy/core/: audit.py  claude_session.py  compactor.py  config.py  memory.py  security.py  session_manager.py
aiarmy/tools/: __init__.py  search_ops.py  system_ops.py  web_ops.py
airarmy/: __init__.py  cli.py
airarmy/agents/: analyst.py  base.py  commander.py  developer.py  researcher.py  writer.py
airarmy/core/: budget.py  config.py
airarmy/tools/: file_ops.py  git_ops.py  registry.py  shell_ops.py
